--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,31 @@
   margin: 0;
   font-family: "Inter", sans-serif;
   color: #f1f5f9;
+  text-shadow: 3px 2px 2px #0f172a;
+}
+
+button {
+  cursor: pointer;
+}
+#addBook {
+  justify-self: flex-end;
+  border: 3px solid #0f172a;
+  background: #475569;
+  padding: 10px 30px 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-shadow: 0px 2px 2px #0f172a;
+  font-size: 20px;
+}
+
+#addBook:hover {
+  background-color: #64748b;
+}
+
+.footerText a {
+  text-decoration: none;
+  color: #94a3b8;
+  font-weight: 600;
 }
 .container {
   display: grid;
@@ -10,9 +35,6 @@
   height: 100vh;
 }
 
-.headerTitle {
-  color: #f1f5f9;
-}
 .header {
   display: flex;
   justify-content: space-between;
@@ -23,25 +45,67 @@
   z-index: 20;
 }
 
-#addBook {
-  justify-self: flex-end;
-  border: 3px solid #0f172a;
-  background: #475569;
-  padding: 10px 30px 10px;
-  border-radius: 10px;
-  font-weight: bold;
-}
-
-#addBook:hover {
-  cursor: pointer;
-  background-color: #64748b;
-  transform: ;
-}
-
 .library {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
   background-color: #334155;
 }
 
+.book {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #0f172a;
+  width: 250px;
+  height: 250px;
+  margin-left: 20px;
+  margin-top: 20px;
+  padding: 25px 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 3px;
+}
+
+.bookTitle,
+.author,
+.pages {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.bookButton {
+  width: 200px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  color: #0f172a;
+  font-size: 24px;
+  text-shadow: 0px 2px 2px #0f172a;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 3px;
+}
+
+.read {
+  background-color: lightgreen;
+}
+
+.remove,
+.notread {
+  background-color: #ff7377;
+}
+
+.read:hover{
+    background-color: rgb(176, 243, 176);
+
+}
+
+.remove:hover, .notread:hover {
+    background-color: #e8989a;
+}
 .footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #1e293b;
+  text-shadow: 3px 2px 2px #0f172a;
 }
